syntax = "proto3";

option go_package = "github.com/OpenNMS-Cloud/flows/api/flows/document";
option java_multiple_files = true;
option java_package = "org.opennms.horizon.flows.document";
package org.opennms.horizon.flows.document;

import "google/protobuf/wrappers.proto";
import "flow_document.proto";

message TenantLocationSpecificFlowDocumentLog {
  string tenant_id = 1;
  string location_id = 2;
  string system_id = 3;

  repeated FlowDocument message = 4;
}
